# Cocktail-Party

./: .env.example  .gitignore  README.md  diarization.py  pyproject.toml  utilities.py  whisper_stt.py
Audio_Analysis/: ai_tts.py  push_to_talk.py  push_to_talk_gui.py  requirements.txt  test.py  test2.py  tts.py  tts_gui.py
advanced/: audio_utils.py  internal_audio_bus.py  local_party.py  party_manager.py  party_setup.py  voice_chat_clean.py  whisper_configuration.py
local-voice-ai-agent/: .dockerignore  .gitignore  Dockerfile  README.md  agent_runtime.py  audio_utils.py  config.py  conversation_mode.py  conversation_tracker.py  diarization_client.py  diarization_engine.py  diarization_server.py  docker-compose.yml  file_2.py  index.html  llm_client.py  local_voice_chat_advanced.py  local_voice_chat_multispeaker.py  party_manager.py  pyproject.toml  resample.py  speaker_diarization_handler.py  utilities.py  voice_chat.py  voice_chat_2.py  voice_chat_clean.py  voice_chat_testing.py  voice_chat_testing_2.py  voice_config.py  voice_models.py  webrtc_ui.py  whisper_configuration.py  whisper_stt.py
local-voice-ai-agent/old_stuff/: Dockerfile  docker-compose.yml  llm_client.py  local_voice_chat_advanced.py  pyproject.toml  voice_chat_testing.py  voice_config.py
local-voice-ai-agent/scripts/: blackhole_setup.sh
speaker_diarization/: TECHNICAL_REPORT.md  __init__.py  diarizer.py  embedding_extractor.py  online_clusterer.py  utils.py
